🔧 Fix Sapphify portfolio page displaying on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -349,8 +349,3 @@ li {
   margin-bottom: 1%;
   padding: 0 36px;
 }
-
-.portfolio-sapphify {
-  left: 100%;
-  top: -25%;
-}
